Metaspace::_class_vsm not initialized if compressed class pointers are disabled

XMLWordPrintable

        SpaceManager* Metaspace::_class_vsm is left uninitialized if compressed class pointers are disabled.

        This is a day zero bug from early Metaspace days.

        Note that this was accidentally fixed in JDK 11 with "8199431: Split up class Metaspace into a static and a non-static part". So it is only a problem for 8, 9, 10.

              Assignee:
              Thomas Stuefe
              Reporter:
              Thomas Stuefe
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: