8241444: Metaspace::_class_vsm not initialized if compressed class pointers are disabled

Initialize _class_vsm to NULL by default

Reviewed-by: phh